refactor(entity): 统一添加序列化支持并优化代码结构
- 在所有实体类中添加 java.io.Serial 注解以支持序列化
- 为 Album、Book、Comment、Footprint、Log、Movie、Notice、Photo、PostTag、Resource、Tag、User 等实体类添加序列化支持
- 移除 CommentController 中未使用的导入依赖
- 使用 switch 表达式重构 StpInterfaceImpl 中的登录ID解析逻辑
- 为 WebMvcConfig 中的资源处理器方法添加非空注解支持